# HTTPServer

./: .gitignore  CMakeLists.txt  FINAL_CHECKLIST.md  FINAL_REVIEW.md  LICENSE  README.md  REVIEW.md  config.json
include/: config.h  logger.h  parser.h  router.h  server.h  socket.h  threadpool.h
public/: about.html  index.html  styles.css
src/: config.cpp  logger.cpp  main.cpp  parser.cpp  router.cpp  server.cpp  socket.cpp  threadpool.cpp
tests/: benchmark.sh  run_tests.sh
